fix: header wrap fixed

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@ header {
   box-shadow: 3px 3px 7px 2px rgba(0, 0, 0, 0.03);
   height: 4rem;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 [data-theme="dark"] header {
